--- a/configs/thresholding.yaml
+++ b/configs/thresholding.yaml
@@ -1,15 +1,26 @@
 load:
   czi_path: extern_Synlab_2156_17_3_MTB.czi
+  smear: 1 # for now only 1 is available
   tile: 673 # None if whole smear, otherwise number of tile
 
 preprocessing:
   algorithm: sharp
-  split: True  # whether to split the image into tiles or not before applying thresholding algorithm
+  split: True  # whether to split the image into tiles or not before applying thresholding algorithm 
+  # for now only True is supported
   tile_size: 16 # size of single tiles if split is True
 
 
 thresholding:
-  algorithm: otsu #otsu, hard, adaptive, gaussian
+  algorithm: otsu #otsu, hard, adaptive, gaussian  (only otsu is supported for now)
   threshold: 5000 #only used if thresholding_alg is hard
   block_size: 10 #only for adaptive (not sure what it is)
   c: 10 #only for adaptive (not sure what it is)
+
+postprocessing:
+
+
+
+visualization:
+  show: True # whether to show the image or not
+  save: True # whether to save the image or not
+  save_path: extern_Synlab_2156_17_3_MTB.png # path to save the image to
