--- a/configs/thresholding.yaml
+++ b/configs/thresholding.yaml
@@ -15,7 +15,8 @@ thresholding:
 
 postprocessing:
   number_of_black_pixels: 215 # number of black pixels to decide whether a tile is background or not
-
+  x_tiles: 128
+  y_tiles: 94
 
 visualization:
   show: True # whether to show the image or not
