--- a/configs/thresholding.yaml
+++ b/configs/thresholding.yaml
@@ -1,6 +1,7 @@
 load:
   czi_path: TB_sample/extern_Synlab_2156_17_3_MTB.czi
   tile: None # None if whole smear, otherwise number of tile
+  blurry_deselection: True # whether to remove blurry tiles or not
 
 preprocessing:
   algorithm: sharp
@@ -12,11 +13,13 @@ thresholding:
   c: 10 #only for adaptive (not sure what it is)
   split: True  # whether to split the image into tiles or not before applying thresholding algorithm 
   tile_size: 16 # size of single tiles if split is True
+  blurry_deselection: True # whether to remove blurry tiles or not
 
 postprocessing:
   number_of_black_pixels: 215 # number of black pixels to decide whether a tile is background or not
   x_tiles: 128
   y_tiles: 94
+  crop: False # whether to crop the image or not
 
 visualization:
   show: True # whether to show the image or not
