--- a/configs/thresholding.yaml
+++ b/configs/thresholding.yaml
@@ -1,7 +1,7 @@
 load:
   czi_path: TB_sample/extern_Synlab_2156_17_3_MTB.czi
-  tile: None # None if whole smear, otherwise number of tile
-  blurry_deselection: True # whether to remove blurry tiles or not
+  tile: 673 # None if whole smear, otherwise number of tile
+  blurry_deselection: False # whether to remove blurry tiles or not
 
 preprocessing:
   algorithm: sharp
@@ -19,9 +19,9 @@ postprocessing:
   number_of_black_pixels: 215 # number of black pixels to decide whether a tile is background or not
   x_tiles: 128
   y_tiles: 94
-  crop: False # whether to crop the image or not
+  crop: True # whether to crop the image or not
 
 visualization:
-  show: True # whether to show the image or not
+  show: False # whether to show the image or not
   save: True # whether to save the image or not
   save_path: extern_Synlab_2156_17_3_MTB.png # path to save the image to
