--- a/configs/thresholding.yaml
+++ b/configs/thresholding.yaml
@@ -1,10 +1,10 @@
 load:
   czi_path: TB_sample/extern_Synlab_2156_17_3_MTB.czi
-  tile: 673 # None if whole smear, otherwise number of tile
-  blurry_deselection: False # whether to remove blurry tiles or not
+  tile: None # None if whole smear, otherwise number of tile
+  blurry_deselection: True # whether to remove blurry tiles or not
 
 preprocessing:
-  algorithm: rescale #sharpen, rescale
+  algorithm: rescale #sharp, rescale
 
 thresholding:
   algorithm: adaptive_gaussian #otsu, hard, adaptive_gaussian, adaptive_mean
@@ -15,18 +15,16 @@ thresholding:
   tile_size: 16 # size of single tiles if split is True
   x_tiles: 128
   y_tiles: 94
-  blurry_deselection: True # whether to remove blurry tiles or not
 
 postprocessing:
+  algorithm: adaptive_gaussian #otsu, hard, adaptive_gaussian, adaptive_mean
   number_of_black_pixels: 215 # number of black pixels to decide whether a tile is background or not
   x_tiles: 128
   y_tiles: 94
   tile_size: 16 # size of single tiles if split is True
-  algorithm: adaptive_gaussian #otsu, hard, adaptive_gaussian, adaptive_mean
-
+  
 saving: 
-  save: True # whether to save the image or not
+  save: False # whether to save the labelled by hand dataset or not
 
 visualization:
   show: True # whether to show the image or not
-  save_path: extern_Synlab_2156_17_3_MTB.png # path to save the image to
