--- a/configs/thresholding.yaml
+++ b/configs/thresholding.yaml
@@ -1,7 +1,8 @@
 load:
   czi_path: TB_sample/extern_Synlab_2156_17_3_MTB.czi
-  tile: 673 # None if whole smear, otherwise number of tile
+  tile: None # None if whole smear, otherwise number of tile
   blurry_deselection: True # whether to remove blurry tiles or not
+  interactive_config: True # whether to use interactive config or not
 
 preprocessing:
   algorithm: sharp #sharp, rescale
@@ -23,12 +24,16 @@ postprocessing:
   x_tiles: 128
   y_tiles: 94
   tile_size: 16 # size of single tiles if split is True
+  crop: True # whether to crop the image or not
 
 labelling_dataset: 
   create_dataset: False
 
 saving: 
   save: False # whether to save the labelled by hand dataset or not
+
+inference:
+  do_inference: True # whether to do inference or not
 
 visualization:
   show: True # whether to show the image or notgit 
