--- a/configs/thresholding.yaml
+++ b/configs/thresholding.yaml
@@ -1,16 +1,16 @@
 load:
-  czi_path: TB_sample/extern_Synlab_2156_17_3_MTB.czi
+  czi_path: extern_Synlab_2156_17_3_MTB.czi # insert path to file
   tile: 673 # None if whole smear, otherwise number of tile
-  blurry_deselection: True # whether to remove blurry tiles or not
+  blurry_deselection: False # whether to remove blurry tiles or not
 
 preprocessing:
-  algorithm: sharp #sharp, rescale
+  algorithm: rescale # sharp for Otsu and hard thresholding, rescale for adaptive thresholding
 
 thresholding:
-  algorithm: adaptive_gaussian #otsu, hard, adaptive_gaussian, adaptive_mean
-  hard_threshold_param: 5000 # only used 
-  block_size: 25 # only for adaptive (the size of the neighborhood)
-  c: -7 #only for adaptive (constant to substract from the mean)
+  algorithm: adaptive_gaussian # otsu, hard, adaptive_gaussian, adaptive_mean
+  hard_threshold_param: 5000 # only used for hard thresholding
+  block_size: 25 # only used for adaptive thresholding (defines the size of the neighborhood)
+  c: -7 # only used for adaptive thresholding (defines constant to be substracted from the (Gaussian) mean)
   split: True    # whether to split the image into tiles or not 
   # before applying thresholding algorithm 
   tile_size: 16 # size of single tiles if split is True
@@ -18,17 +18,18 @@ thresholding:
   y_tiles: 94
 
 postprocessing:
-  algorithm: adaptive_gaussian #otsu, hard, adaptive_gaussian, adaptive_mean
-  number_of_black_pixels: 215 # number of black pixels to decide whether a tile is background or not
+  algorithm: adaptive_gaussian # otsu, hard, adaptive_gaussian, adaptive_mean
+  number_of_black_pixels: 215 # number of black pixels to decide whether a tile is classified as background or not
   x_tiles: 128
   y_tiles: 94
   tile_size: 16 # size of single tiles if split is True
 
 labelling_dataset: 
-  create_dataset: False
+  create_dataset: True # let's you label the cropped images in an interactive window
 
 saving: 
-  save: False # whether to save the labelled by hand dataset or not
+  save: False # whether to save the dataset labelled by hand or not
 
 visualization:
-  show: True # whether to show the image or notgit 
+  show: True # whether to show the image or not
+  algorithm: rescale # sharp, rescale (depending on what was chosen in preprocessing) 
