build project package "tbdetect"

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,11 @@
 [metadata]
 name = tbdetect
 version = 0.0.1
-authors = [
-  {name="Marina Dominguez", email="marina.dominguez@tum.de"},
-  {name="Ida Büschel", email="ida.bueschel@tum.de"},
-  {name="Lorenzo Capobianco", email="ge32deg@mytum.de"},
-  {name="Matteo Cadoni", email="matteo.cadoni.4.97@gmail.com"}
-]
+authors = 
+    {name="Marina Dominguez", email="marina.dominguez@tum.de"}
+    {name="Ida Büschel", email="ida.bueschel@tum.de"}
+    {name="Lorenzo Capobianco", email="ge32deg@mytum.de"}
+    {name="Matteo Cadoni", email="matteo.cadoni.4.97@gmail.com"}
 description = Package for detecting Tuberculosis bacilli in stained sputum smear images
 long_description = file: README.md
 long_description_content_type = text/markdown
