--- a/src/tbdetect/configs/thresholding.yaml
+++ b/src/tbdetect/configs/thresholding.yaml
@@ -2,7 +2,7 @@ load:
   czi_path: TB_sample/extern_Synlab_2156_17_3_MTB.czi # insert path to file
   tile: 673 # None if whole smear, otherwise number of tile
   blurry_deselection: True # whether to remove blurry tiles or not
-  interactive_config: False # whether to use interactive config or not
+  interactive_config: True # whether to use interactive config or not
 
 preprocessing:
   algorithm: rescale # sharp for Otsu and hard thresholding, rescale for adaptive thresholding
