Specify (opt.) package requirements in setup Implement optional features requiring napari

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,7 +20,22 @@ classifiers =
 package_dir =
     = src
 packages = find:
-python_requires = >=3.6
+python_requires = >=3.8
+install_requires =
+    numpy
+    matplotlib
+    opencv-python
+    aicsimageio
+    argparse
+    ruamel.yaml
+    pandas
+    torch>=1.13.1
+    scikit-learn
+    h5py
+
+[options.extras_require]
+napari =
+    napari
 
 [options.packages.find]
 where = src
