--- a/setup.cfg
+++ b/setup.cfg
@@ -26,6 +26,8 @@ install_requires =
     matplotlib
     opencv-python
     aicsimageio
+    aicspylibczi >= 3.0.5
+    fsspec >= 2022.7.1
     argparse
     ruamel.yaml
     pandas
