--- a/configs/train.yaml
+++ b/configs/train.yaml
@@ -2,15 +2,17 @@ load:
   all_data_path: 'labelled_data/data.pkl'
   data_path_list: ['labelled_data/tile_673_smear_2156_17_3.pkl', 'labelled_data/tile_674_smear_2156_17_3.pkl', 'labelled_data/tile_675_smear_2156_17_3.pkl', 'labelled_data/tile_676_smear_2156_17_3.pkl', 'labelled_data/tile_677_smear_2156_17_3.pkl', 'labelled_data/tile_777_smear_2156_17_3.pkl', 'labelled_data/tile_991_smear_2156_17_3.pkl', 'labelled_data/tile_671_smear_2156_17_3.pkl', 'labelled_data/tile_500_smear_2156_17_3.pkl', labelled_data/all.pkl]
   #data_path_list: ['labelled_data/tile_673_smear_2156_17_3.pkl']
-  sampling_percentage: 1
+  sampling_percentage: 0.3
   remove_black_img: True
-
-filter:
-  remove_black_img: False
+  remove_white_img: False # currently removes all images, TODO: fix
 
 train:
-  batch_size: 500
-  epochs: 5
+  batch_size: 2500
+  epochs: 3
   n_splits: 5
 
-random_state: 42  #seed for reproducible results
+results:
+  save_models: False # save models after training
+
+
+random_state: 34  #seed for reproducible results
