--- a/configs/thresholding.yaml
+++ b/configs/thresholding.yaml
@@ -1,7 +1,7 @@
 load:
   czi_path: TB_sample/extern_Synlab_2156_17_3_MTB.czi         # insert path to file
   tile: 1006                        # None if whole smear, otherwise number of tile
-  interactive_config: True         # whether to use interactive config or not
+  interactive_config: False         # whether to use interactive config or not
 
 preprocessing:
   algorithm: rescale                # sharp for Otsu and hard thresholding, rescale for adaptive thresholding
@@ -28,8 +28,8 @@ labelling_dataset:
   create_dataset: False              # lets you label the cropped images in an interactive window
 
 saving: 
-  save: True                        # whether to save the dataset labelled by hand or not
-  save_stats: True                  # whether to save the statistics of the labelled dataset or not
+  save: False                        # whether to save the dataset labelled by hand or not
+  save_stats: False                  # whether to save the statistics of the labelled dataset or not
 
 inference:
   do_inference: True                # whether to do inference or not
